fixed scrollbar display bug

--- a/public/assets/css/gamePage.css
+++ b/public/assets/css/gamePage.css
@@ -225,3 +225,9 @@ a {
     margin: 20px;
 
 }
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+
